--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Online chess database",
   "main": "app.js",
   "dependencies": {
+    "domino": "^2.1.6",
     "formidable": "^2.1.1",
     "fs": "^0.0.1-security",
     "gm": "^1.25.0",
     "iconv-lite": "^0.6.3",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {},
